income,expense周りの作成,検索機能の追加,レイアウト微調整

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,3 +11,9 @@ ja:
         asset_name: 資産名
         location_name: 資産場所
 
+      income:
+        income_name: 入金名
+        income_day: 入金日
+        income_money: 入金の金額
+        income_memo: 入金メモ
+
